--- a/medweb/static/standalone/client-testimonials-carousel/scss/style.scss
+++ b/medweb/static/standalone/client-testimonials-carousel/scss/style.scss
@@ -40,12 +40,14 @@ Main components
 .cd-testimonials-wrapper {
 	@extend %reset;
 	position: relative;
-	width: 90%;
+	width: 100%;
 	max-width: $M;
 	background-color: $color-1;
-	margin: 2em auto;
+	//margin: 2em auto;
 	@include font-smoothing;
-	padding: 20px 40px 20px;
+	padding: 40px 40px 40px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	z-index: 1;
 
 	&::after {
@@ -68,8 +70,12 @@ Main components
 	}
 
 	@include MQ(M) {
-		margin: 4em auto;
+		margin: 2em auto;
 		padding: 64px 50px 74px;
+		&::after {
+			/* quotation mark visible */
+			display: block;
+		}
 	}
 
 	@include MQ(L) {
